--- a/src/components/searchbar/searchbar.styles.scss
+++ b/src/components/searchbar/searchbar.styles.scss
@@ -6,5 +6,9 @@
 		border-radius: 5px;
 		border: 2px solid rgb(47, 91, 169);
 		outline: none;
+
+		&:focus {
+			border-color: rgba(47, 91, 169, 0.6);
+		}
 	}
 }
