adding redux to manage state, reselect for memoization, and adding searchbar component functionality

--- a/src/components/city-list-item/city-list-item.styles.scss
+++ b/src/components/city-list-item/city-list-item.styles.scss
@@ -7,21 +7,29 @@
 	margin-bottom: 1em;
 	cursor: pointer;
 
-	.city {
-		flex: 0 1 80%;
+	.list-item-name {
+		flex: 0 1 75%;
 
 		h4 {
 			margin-bottom: 0;
 		}
 	}
 
-	.city-weather {
+	.list-item-weather {
 		display: flex;
-		flex: 0 0 20%;
+		flex: 0 0 25%;
 		justify-content: space-between;
 
-		.city-weather-temp {
+		img {
+			min-width: 100px;
+		}
+
+		.item-weather-temp {
 			text-align: center;
+
+			span {
+				padding: 0 5px;
+			}
 		}
 	}
 }
