--- a/src/components/day-card/day-card.styles.scss
+++ b/src/components/day-card/day-card.styles.scss
@@ -2,7 +2,7 @@
 	text-align: center;
 	background-color: white;
 	width: 250px;
-	height: 350px;
+	min-height: 350px;
 	border-radius: 5px;
 	cursor: pointer;
 	box-shadow: 0px 7px 8px black;
@@ -12,13 +12,30 @@
 		box-shadow: 2px 15px 20px black;
 	}
 
-	h3 {
-		margin-top: 0;
-	}
-
 	.card-content {
 		padding: 1em;
 		width: 100%;
 		height: 100%;
+
+		.content-day {
+			margin-top: 0;
+			font-size: 2rem;
+		}
+
+		.content-datetime {
+			margin-top: 0;
+		}
+
+		.content-weathericon {
+			width: 50%;
+		}
+
+		.content-temperature {
+			font-size: 1.8rem;
+		}
+
+		.content-description {
+			text-transform: uppercase;
+		}
 	}
 }
