--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,9 @@ h1 {
     background: linear-gradient(180deg, rgba(20,40,80,1) 50%, rgba(39,73,109,1));
 	min-height: 100vh;
 }
+
+/*//prevents background page from scrolling when the modal is open*/
+.ReactModal__Html--open,
+.ReactModal__Body--open {
+	overflow: hidden;
+}
