--- a/src/components/searchbar/searchbar.styles.scss
+++ b/src/components/searchbar/searchbar.styles.scss
@@ -1,8 +1,8 @@
 .searchbar {
 	align-self: flex-end;
-	padding-right: 10px;
 
 	input {
+		width: 100%;
 		padding: 10px 15px;
 		border-radius: 5px;
 		border: 2px solid rgb(47, 91, 169);
