creating list component that will leverage address-item component for the list of addresses and city-item for the list of cities

--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -12,6 +12,11 @@
 	}
 }
 
+.btn-color-green {
+	background-color: green;
+	color: white;
+}
+
 .btn-outline-primary {
 	border: 2px solid rgb(47, 91, 169);
 
