--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -12,6 +12,10 @@
 	}
 }
 
+.btn-float-right {
+	float: right;
+}
+
 .btn-color-green {
 	background-color: green;
 	color: white;
@@ -27,6 +31,17 @@
 	}
 }
 
-.btn-float-right {
-	float: right;
+.btn-shape-circle {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background: rgb(234,114,140);
+	background: radial-gradient(circle, rgba(234,114,140,1) 20%, rgba(234,114,140,0.5) 100%);
+
+	&:hover {
+		color: white;
+	}
 }
+
+
+
