--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -35,11 +35,12 @@
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-	background: rgb(234,114,140);
-	background: radial-gradient(circle, rgba(234,114,140,1) 20%, rgba(234,114,140,0.5) 100%);
+	font-weight: bold;
 
 	&:hover {
 		color: white;
+		background: rgb(234,114,140);
+		background: radial-gradient(circle, rgba(234,114,140,1) 30%, rgba(234,114,140,0.5) 100%);
 	}
 }
 
